<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:background="@color/white"
    tools:context=".core.authentication.view.LoginActivity">
    
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="124dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@drawable/baseline_format_list_numbered_24" />

    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="85dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style = "?attr/textInputFilledStyle"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_input_background"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:id="@+id/input_name"
            android:hint="@string/fullName"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            app:endIconMode="clear_text"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editName"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style = "?attr/textInputFilledStyle"
            android:layout_marginVertical="10dp"
            android:background="@drawable/text_input_background"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:id="@+id/input_email"
            android:hint="@string/email"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            app:endIconMode="clear_text"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style = "?attr/textInputFilledStyle"
            android:background="@drawable/text_input_background"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:id="@+id/input_pass"
            android:hint="@string/password"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            app:endIconMode="password_toggle"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_pass"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_create"
            android:layout_marginVertical="10dp"
            android:text="@string/signup"
            android:backgroundTint="@color/yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>